--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -5,17 +5,14 @@
     <meta charset="utf-8"></meta>
     <title>Ejercicio 2</title> 
 
-    <style>
-body{
+    
 
-    color: green ;
-}
 
     </style>
     
 </head>
 
-<body>
+<body style="color: green ;">
 
 <p>Escribir una regla para que todos los elementos de la página aparezcan en verde.
     Ingrese algún texto y pruebe en su navegador.</p>
