--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -6,13 +6,9 @@
     <title>Ejercicio 2</title> 
 
     
-
-
-    </style>
-    
 </head>
 
-<body style="color: green ;">
+<body style="color: green ; font-size: 30%;">
 
 <p>Escribir una regla para que todos los elementos de la página aparezcan en verde.
     Ingrese algún texto y pruebe en su navegador.</p>
