--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -2,17 +2,16 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8"></meta>
-    <title>Ejercicio 2</title> 
-
-    
+    <meta charset="utf-8">
+    </meta>
+    <title>Ejercicio 2</title>
 </head>
 
 <body style="color: greenyellow ; font-size: 150%;">
 
-<p>Escribir una regla para que todos los elementos de la página aparezcan en verde.
-    Ingrese algún texto y pruebe en su navegador.</p>
-   
+    <p>Escribir una regla para que todos los elementos de la página aparezcan en verde.
+        Ingrese algún texto y pruebe en su navegador.</p>
+
 </body>
 
 
