--- a/Ejercicio3.html
+++ b/Ejercicio3.html
@@ -5,14 +5,11 @@
     </meta>
     <title>Ejercicio </title>
     <style>
-h1,p{
+        h1,
+        p1 {
 
-    background-color: yellow;
-
-
-}
-
-
+            background-color: yellow;
+        }
     </style>
 
 
@@ -23,8 +20,8 @@ h1,p{
     <p>Escribir una regla que defina un fondo amarillo a los elementos h1 y p. Ingrese algún
         texto y pruebe en su navegador.</p>
 
-        <h1>Titulo 1</h1>
-        <p> Esto es el parrafo 1</p>
+    <h1>Titulo 1</h1>
+    <p id="p1"> Esto es el parrafo 1</p>
 
 
 </body>
