--- a/Ejercicio3.html
+++ b/Ejercicio3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     </meta>
-    <title>Ejercicio </title>
+    <title>Ejercicio 3 </title>
     <style>
         h1,
         #p1 {
