--- a/Ejercicio4.html
+++ b/Ejercicio4.html
@@ -5,7 +5,7 @@
     </meta>
     <title>Ejercicio 4 </title>
 
-    <link rel="stylesheet" href="Ejercicio4.css">
+    <link rel="stylesheet" type="" href="Ejercicio4.css">
 
 </head>
 
