--- a/Ejercicio 5.html
+++ b/Ejercicio 5.html
@@ -5,6 +5,8 @@
     </meta>
     <title>Ejercicio 5 _PAGINA 1 </title>
 
+    <link rel="stylesheet" type="" href="Ejercicio5_1_2.css">
+
 </head>
 
 <body>
@@ -14,6 +16,8 @@
         el tamaño de letra a 10.</p>
 
         <hr>
+
+        <h3>Ejercicio 5 : Pagina 1</h3>
 
 <P> Esta es la pagina 1, y respeta el siguiente estilo: el tipo de letra es Verdana y el tamaño 8  </P>
 
