--- a/Ejercicio5_1.html
+++ b/Ejercicio5_1.html
@@ -5,6 +5,8 @@
     </meta>
     <title>Ejercicio 5 _PAGINA 2 </title>
 
+    <link rel="stylesheet" href="Ejercicio5_1_2.css">
+
 </head>
 
 <body>
@@ -15,7 +17,9 @@
 
         <hr>
 
-<P> Esta es la pagina 2, y respeta el siguiente estilo: el tipo de letra es Verdana y el tamaño 10 </P>
+        <h3>Ejercicio 5 : Pagina 2</h3>
+
+<p font-size: 8 > Esta es la pagina 2, y respeta el siguiente estilo: el tipo de letra es Verdana y el tamaño 10 </p>
 
 
 </body>
