--- a/Ejercicio5_1.html
+++ b/Ejercicio5_1.html
@@ -19,7 +19,7 @@
 
         <h3>Ejercicio 5 : Pagina 2</h3>
 
-<p font-size: 8 > Esta es la pagina 2, y respeta el siguiente estilo: el tipo de letra es Verdana y el tamaño 10 </p>
+<p style="font-size: 10;" > Esta es la pagina 2, y respeta el siguiente estilo: el tipo de letra es Verdana y el tamaño 10 </p>
 
 
 </body>
