--- a/Ejercicio 6_1.html
+++ b/Ejercicio 6_1.html
@@ -20,7 +20,7 @@
     <h1> Ejercicio 6 </h1>
     <h2> Pagina 1</h2>
 
-    <p>Tipo de letra de los párrafos p Arial Black
+    <p id="p1">Tipo de letra de los párrafos p Arial Black
         Realice dos páginas que verifiquen la correcta configuración del estilo definido</p>
 
 </body>
