--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <title> Ejercicio 7</title>
  <style>
-h1{color: red; }
+h1{color: red; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30;
+
+}
 
 #p1 { 
     color: orange;
@@ -25,7 +29,7 @@ h1{color: red; }
 <body>
     <p> Definir un estilo que permita diseñar una página en la que tenemos un título y un párrafo.
         En concreto, presentar el texto en color rojo para el título, y naranja para el párrafo.
-        Además, el párrafo tiene el texto justificado y un interlineado grueso. También, le daremos al
+        Además, el párrafo tiene el texto justificado y un interlineado grueso. <br> También, le daremos al
         título un tipo de letra arial y le cambiaremos el tamaño.</p>
 
     <hr>
