--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title> Ejercicio 7</title>
  <style>
-h1{color: red; 
+h3{
+    color: red; 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15;
 
@@ -15,12 +16,6 @@ h1{color: red;
     color: orange;
     text-align: justify;
     line-height: 5;
-
-}
-
-
-
-
 
  </style>
 
