--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -24,8 +24,9 @@ h3{
 <body>
     <p> Definir un estilo que permita diseñar una página en la que tenemos un título y un párrafo.
         En concreto, presentar el texto en color rojo para el título, y naranja para el párrafo.
-        Además, el párrafo tiene el texto justificado y un interlineado grueso. <br> También, le daremos al
-        título un tipo de letra arial y le cambiaremos el tamaño.</p>
+        Además, el párrafo tiene el texto justificado y un interlineado grueso. 
+        También, le daremos al título un tipo de letra arial y le cambiaremos el tamaño.
+        </p>
 
     <hr>
 
@@ -33,8 +34,8 @@ h3{
 
     <p id="p1">
         En concreto, presentar el texto en color rojo para el título, y naranja para el párrafo.
-        Además, el párrafo tiene el texto justificado y un interlineado grueso. También, le daremos al
-        título un tipo de letra arial y le cambiaremos el tamaño.
+        Además, el párrafo tiene el texto justificado y un interlineado grueso. <br> 
+        También, le daremos al título un tipo de letra arial y le cambiaremos el tamaño.
 
     </p>
 
