--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <title> Ejercicio 7</title>
- <style>
-h3{
-    color: red; 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:xx-large;
+    <style>
+        h3 {
+            color: red;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: xx-large;
 
-}
+        }
 
-#p1 { 
-    color: orange;
-    text-align: justify;
-    line-height: 3;
-
- </style>
+        #p1 {
+            color: orange;
+            text-align: justify;
+            line-height: 3;
+        }
+    </style>
 
 </head>
 
 <body>
     <p> Definir un estilo que permita diseñar una página en la que tenemos un título y un párrafo.
         En concreto, presentar el texto en color rojo para el título, y naranja para el párrafo.
-        Además, el párrafo tiene el texto justificado y un interlineado grueso. 
+        Además, el párrafo tiene el texto justificado y un interlineado grueso.
         También, le daremos al título un tipo de letra arial y le cambiaremos el tamaño.
-        </p>
+    </p>
 
     <hr>
 
@@ -34,7 +34,7 @@ h3{
 
     <p id="p1">
         En concreto, presentar el texto en color rojo para el título, y naranja para el párrafo.
-        Además, el párrafo tiene el texto justificado y un interlineado grueso. <br> 
+        Además, el párrafo tiene el texto justificado y un interlineado grueso. <br>
         También, le daremos al título un tipo de letra arial y le cambiaremos el tamaño.
 
     </p>
