--- a/Ejercicio 8.html
+++ b/Ejercicio 8.html
@@ -7,7 +7,7 @@
 
     <style>
         ul {
-          list-style-image: url('https://www.flaticon.es/icono-gratis/etiqueta-de-precio_3155608');
+          list-style-image: url('Ejercicio8_CCS.url');
         }
         </style>
 
