--- a/Ejercicio 8.html
+++ b/Ejercicio 8.html
@@ -7,7 +7,7 @@
 
     <style>
         ul {
-          list-style-image: url('Ejercicio8_CCS.url');
+          list-style-image: url('https://cdn-icons-png.flaticon.com/512/3155/3155608.png');
         }
         </style>
 
