--- a/Ejercicio 8.html
+++ b/Ejercicio 8.html
@@ -7,8 +7,8 @@
 
     <style>
         ul {
-          list-style-image: url('https://cdn.icon-icons.com/icons2/3946/PNG/512/arrow_location_icon_251361.png');
-          width: 50px;
+          list-style-image: url('https://interactive-examples.mdn.mozilla.net/media/examples/rocket.svg') ;
+        
         }
         </style>
 
