--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
 
     <title>Ejercicio 9 </title>
+
+    <style>
+table{
+    border: 1;
+}
+
+
+
+
+    </style>
 </head>
 <body>
     <p>Definir un estilo para aplicar a tablas. Se piden diferentes valores para el estilo del borde;
@@ -16,7 +26,7 @@
         heredarán las celdas también. Por último la declaración padding:4px; en el selector td para
         dejar un margen entre el borde de las celdas y su contenido</p>
 
-        <table border="1">
+        <table>
 
             <thead>
                 <caption> Marzo 2023</caption>
