--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -6,8 +6,13 @@
     <title>Ejercicio 9 </title>
 
     <style>
-table, th, td {
+table {
   border: 1px solid;
+}
+
+th{ 
+    border-collapse: collapse;
+
 }
 
 
