--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -6,14 +6,10 @@
     <title>Ejercicio 9 </title>
 
     <style>
-table {
+table, thead, td {
   border: 1px solid;
 }
 
-th{ 
-    border-collapse: collapse;
-
-}
 
 
 
@@ -33,7 +29,7 @@ th{
 
         <table>
 
-            <thead>
+            <thead style="border-collapse:collapse ;">
                 <caption> Marzo 2023</caption>
     
             </thead>
