--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -5,16 +5,6 @@
 
     <title>Ejercicio 9 </title>
 
-    <style>
-table, thead, td {
-  border: 1px solid;
-}
-
-
-
-
-
-    </style>
 </head>
 <body>
     <p>Definir un estilo para aplicar a tablas. Se piden diferentes valores para el estilo del borde;
@@ -27,7 +17,7 @@ table, thead, td {
         heredarán las celdas también. Por último la declaración padding:4px; en el selector td para
         dejar un margen entre el borde de las celdas y su contenido</p>
 
-        <table>
+        <table style="border: 1px solid ;">
 
             <thead style="border-collapse:collapse ;">
                 <caption> Marzo 2023</caption>
