--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Ejercicio 9 </title>
+<title>Ejercicio 9 </title>
+
+<style>
+
+table{
+
+  border: 1px ;  
+}
+
+
+
+
+</style>
 
 </head>
 <body>
@@ -17,9 +29,9 @@
         heredarán las celdas también. Por último la declaración padding:4px; en el selector td para
         dejar un margen entre el borde de las celdas y su contenido</p>
 
-        <table style="border: 1px solid ;">
+        <table>
 
-            <thead style="border-collapse:collapse ;">
+            <thead >
                 <caption> Marzo 2023</caption>
     
             </thead>
