--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -7,9 +7,14 @@
 
 <style>
 
-table{
+.table1{
 
-  border: 1px solid ;  
+  border-collapse: separate ;  
+}
+
+.encabezados{
+
+    border: 1px solid;
 }
 
 
@@ -29,7 +34,7 @@ table{
         heredarán las celdas también. Por último la declaración padding:4px; en el selector td para
         dejar un margen entre el borde de las celdas y su contenido</p>
 
-        <table>
+        <table class="tabla1">
 
             <thead >
                 <caption> Marzo 2023</caption>
@@ -39,13 +44,13 @@ table{
             <tbody>
     
                 <tr>
-                    <th> Lunes</th>
-                    <th> Martes</th>
-                    <th> Miercoles</th>
-                    <th> Jueves</th>
-                    <th> Viernes</th>
-                    <th> Sabado</th>
-                    <th> Domingo</th>
+                    <th class="Encabezados"> Lunes</th>
+                    <th class="Encabezados"> Martes</th>
+                    <th class="Encabezados"> Miercoles</th>
+                    <th class="Encabezados"> Jueves</th>
+                    <th class="Encabezados"> Viernes</th>
+                    <th class="Encabezados"> Sabado</th>
+                    <th class="Encabezados"> Domingo</th>
                 </tr>
     
                 <tr>
