--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -7,7 +7,7 @@
 
 <style>
 
-.table1{
+table{
 
     border-style: double;
 }
@@ -34,7 +34,7 @@
         heredarán las celdas también. Por último la declaración padding:4px; en el selector td para
         dejar un margen entre el borde de las celdas y su contenido</p>
 
-        <table class="tabla1">
+        <table >
 
             <thead >
                 <caption> Marzo 2023</caption>
