--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -12,7 +12,7 @@ table{
     border-style: double;
 }
 
-.encabezados{
+th{
 
     border-style: solid;
 }
@@ -44,13 +44,13 @@ table{
             <tbody>
     
                 <tr>
-                    <th class="Encabezados"> Lunes</th>
-                    <th class="Encabezados"> Martes</th>
-                    <th class="Encabezados"> Miercoles</th>
-                    <th class="Encabezados"> Jueves</th>
-                    <th class="Encabezados"> Viernes</th>
-                    <th class="Encabezados"> Sabado</th>
-                    <th class="Encabezados"> Domingo</th>
+                    <th> Lunes</th>
+                    <th> Martes</th>
+                    <th> Miercoles</th>
+                    <th> Jueves</th>
+                    <th> Viernes</th>
+                    <th> Sabado</th>
+                    <th> Domingo</th>
                 </tr>
     
                 <tr>
