--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -7,19 +7,11 @@
 
 <style>
 
-table{
+table{border-style: double; background-color: gray;}
 
-    border-style: double;
-}
+th{ border-style: solid; background-color: hsl(175, 43%, 51%);}
 
-th{
-
-    border-style: solid;
-}
-
-td{
-    border-style: inset;
-}
+td{ border-style: inset; background-color: orange;}
 
 
 </style>
