--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -9,7 +9,7 @@
 
 table{border-style: double; background-color: gray;}
 
-th{ border-style: solid; background-color: hsl(175, 43%, 51%);}
+th{ border-style: solid; background-color:rgb(rgb(0, 55, 200), green, blue);}
 
 td{ border-style: inset; background-color: orange;}
 
