--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -7,7 +7,7 @@
 
 <style>
 
-table{border-style: double; background-color: gray;}
+table{border-style: double; background-color: gray; border-spacing:12px}
 
 th{ border-style: solid; background-color:rgb(rgb(0, 200, 123), green, blue);}
 
