--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -11,7 +11,7 @@ table{border-style: double; background-color: gray; border-spacing:12px}
 
 th{ border-style: solid; background-color:rgb(rgb(0, 200, 123), green, blue);}
 
-td{ border-style: inset; background-color: orange;}
+td{ border-style: inset; background-color: orange; padding:4px}
 
 
 </style>
