--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -9,7 +9,7 @@
 
 table{border-style: double; background-color: gray; border-spacing:12px}
 
-th{ border-style: solid; background-color:#1f3438;}
+th{ border-style: solid; background-color:blue;}
 
 td{ border-style: inset; background-color: orange; padding:4px}
 
