--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -9,7 +9,7 @@
 
 table{border-style: double; background-color: gray; border-spacing:12px}
 
-th{ border-style: solid; isolation: isolate; background-color:#33CCCC;}
+th{ border-style: solid; isolation: isolate; background-color:#006699;}
 
 td{ border-style: inset; background-color: orange; padding:4px}
 
