--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -7,7 +7,7 @@
 
 <style>
 
-table{border-style: double;border: 4px; background-color: gray; border-spacing:12px}
+table{border-style: double;border-width: 2; background-color: gray; border-spacing:12px}
 
 th{ border-style: solid; background-color:#006699;}
 
