--- a/Ejercicio10.html
+++ b/Ejercicio10.html
@@ -10,7 +10,7 @@
 p::first-letter {
   font-size: 130%;
   color: red;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
