--- a/Ejercicio10.html
+++ b/Ejercicio10.html
@@ -19,7 +19,7 @@ p::first-letter {
 
 <body>
 
-    <p>Realice un estilo que permita cambiar el aspecto de la primera letra de un párrafo.
+    <p class="Consigna">Realice un estilo que permita cambiar el aspecto de la primera letra de un párrafo.
         Utilice clases para poder separar los párrafos a los que no queremos que se le aplique el
         estilo.
     </p>
