--- a/Parte_B/Ejercicio1_B.html
+++ b/Parte_B/Ejercicio1_B.html
@@ -9,7 +9,7 @@
     <style>
         .mayor {
         
-            font-size: calc(100% + 100%.1.80) ;
+            font-size: calc(100% + (100%*1.80)) ;
         }
 
         .menor {}
