--- a/Parte_B/Ejercicio1_B.html
+++ b/Parte_B/Ejercicio1_B.html
@@ -12,7 +12,9 @@
             font-size: calc(100% + (100%*1.80)) ;
         }
 
-        .menor {}
+        .menor {
+            font-size: calc(100% + (100%-1.40)) ;
+        }
     </style>
 
 </head>
