--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -17,6 +17,14 @@
         <img src="3img/Imagen2.jpg" alt="">
         <img src="3img/Imagen3.jpg" alt="">
 
+        <div class="">
+            <img src="3img/Imagen1.jpg" alt="">
+            <img src="3img/Imagen2.jpg" alt="">
+            <img src="3img/Imagen3.jpg" alt="">
+
+
+        </div>
+
 
 
     
