--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio 2 B</title>
+
+    <style>
+.horizontal{
+
+float: left;
+
+}
+
+
+    </style>
 </head>
 
 
@@ -17,7 +27,7 @@
         <img src="3img/Imagen2.jpg" alt="">
         <img src="3img/Imagen3.jpg" alt="">
 
-        <div class="">
+        <div class="vertical">
             <img src="3img/Imagen1.jpg" alt="">
             <img src="3img/Imagen2.jpg" alt="">
             <img src="3img/Imagen3.jpg" alt="">
