--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio 2 B</title>
 
     <style>
-.horizontal{
+        .horizontal {
 
-float:right;
+            float: right;
 
-}
-
-
+        }
     </style>
 </head>
 
@@ -21,22 +20,27 @@ float:right;
     <p> Definir los estilos necesarios (y el html necesario) para que 3 imágenes incluidas en el
         contenedor “3img” puedan verse en línea (horizontal y vertical) y del mismo tamaño</p>
 
-        <br>
+    <br>
+
+    <div class="horizontal">
 
         <img src="3img/Imagen1.jpg" alt="">
         <img src="3img/Imagen2.jpg" alt="">
         <img src="3img/Imagen3.jpg" alt="">
 
-        <div class="vertical">
-            <img src="3img/Imagen1.jpg" alt="">
-            <img src="3img/Imagen2.jpg" alt="">
-            <img src="3img/Imagen3.jpg" alt="">
+    </div>
+
+    <div class="vertical">
+        <img src="3img/Imagen1.jpg" alt="">
+        <img src="3img/Imagen2.jpg" alt="">
+        <img src="3img/Imagen3.jpg" alt="">
 
 
-        </div>
+    </div>
 
 
 
-    
+
 </body>
+
 </html>
