--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -8,7 +8,8 @@
     <style>
         .horizontal {
 
-            float: right;
+            justify-content: center;
+            align-items: center;
 
         }
     </style>
