--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -15,7 +15,7 @@
 
         .vertical {
 
-justify-content:right;
+justify-content:left;
 
 }
     </style>
@@ -36,6 +36,8 @@ justify-content:right;
         <img src="3img/Imagen3.jpg" alt="">
 
     </div>
+
+    <br>
 
     <div class="vertical">
         <img src="3img/Imagen1.jpg" alt="">
