--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -7,15 +7,16 @@
 
     <style>
         .horizontal {
-
-            justify-content: center;
-            align-items: center;
+display: flex;
+justify-content: right;
 
         }
 
         .vertical {
 
-justify-content:left;
+display: flex;
+flex-direction: column;
+justify-content: center;
 
 }
     </style>
