--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -32,9 +32,9 @@ justify-content: center;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt="">
-        <img src="3img/Imagen2.jpg" alt="">
-        <img src="3img/Imagen3.jpg" alt="">
+        <img src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img src="3img/Imagen3.jpg" alt=""> &nbsp
 
     </div>
 
