--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -16,7 +16,7 @@ justify-content:left;
 
 display: flex;
 flex-direction: column;
-justify-content: center;
+justify-content: left;
 
 }
     </style>
