--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -43,9 +43,9 @@ width: 10%;
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt="">
-        <img src="3img/Imagen2.jpg" alt="">
-        <img src="3img/Imagen3.jpg" alt="">
+        <img src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img src="3img/Imagen3.jpg" alt=""> &nbsp
 
 
     </div>
