--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -20,9 +20,10 @@ display: flex;
 flex-direction: column;
 justify-content: left;
 width: 17%;
-height: 10%;
 
 }
+
+
     </style>
 </head>
 
@@ -36,18 +37,18 @@ height: 10%;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img class="Img1" src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img class="Img2" src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img class="Img3" src="3img/Imagen3.jpg" alt=""> &nbsp
 
     </div>
 
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img class="Img1" src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img class="Img2" src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img class="Imagen3" src="3img/Imagen3.jpg" alt=""> &nbsp
 
 
     </div>
