--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -23,6 +23,17 @@ width: 17%;
 
 }
 
+.vertical.Img2{
+
+    width: 10% ;
+
+}
+
+.vertical.Img3{
+
+    
+}
+
 
     </style>
 </head>
@@ -37,16 +48,16 @@ width: 17%;
 
     <div class="horizontal">
 
-        <img class="Img1" src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img class="Img2" src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img class="Img3" src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img src="3img/Imagen3.jpg" alt=""> &nbsp
 
     </div>
 
     <br>
 
     <div class="vertical">
-        <img class="Img1" src="3img/Imagen1.jpg" alt=""> &nbsp
+        <img src="3img/Imagen1.jpg" alt=""> &nbsp
         <img class="Img2" src="3img/Imagen2.jpg" alt=""> &nbsp
         <img class="Imagen3" src="3img/Imagen3.jpg" alt=""> &nbsp
 
