--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -23,16 +23,7 @@ width: 17%;
 
 }
 
-.vertical.Iron2{
 
-    width: 10% ;
-
-}
-
-.vertical.Img3{
-
-    
-}
 
 
     </style>
@@ -58,8 +49,8 @@ width: 17%;
 
     <div class="vertical">
         <img src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img class="Iron2" src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img class="Iron3" src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img src="3img/Imagen2.jpg" alt=""> &nbsp
+        <img src="3img/Imagen3.jpg" alt=""> &nbsp
 
 
     </div>
