--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -23,12 +23,11 @@ width: 15%;
 
 }
 
-img{
-
-object-fit:none;
-
+.img-normalizada{
+	width: 400px;
+	height: 400px;
+	object-fit: cover;
 }
-
 
 
 
@@ -45,18 +44,18 @@ object-fit:none;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img src="3img/Imagen1.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen2.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen3.jpg" alt="" class="normalizada"> &nbsp
 
     </div>
 
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt=""> &nbsp
-        <img src="3img/Imagen2.jpg" alt=""> &nbsp
-        <img src="3img/Imagen3.jpg" alt=""> &nbsp
+        <img src="3img/Imagen1.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen2.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen3.jpg" alt="" class="normalizada"> &nbsp
 
 
     </div>
