--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -23,13 +23,6 @@ width: 15%;
 
 }
 
-.img-normalizada{
-	width: 400px;
-	height: 400px;
-	object-fit: cover;
-}
-
-
 
     </style>
 </head>
@@ -44,16 +37,16 @@ width: 15%;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt="" class="normalizada"> &nbsp
-        <img src="3img/Imagen2.jpg" alt="" class="normalizada"> &nbsp
-        <img src="3img/Imagen3.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen1.jpg" alt="" > &nbsp
+        <img src="3img/Imagen2.jpg" alt="" > &nbsp
+        <img src="3img/Imagen3.jpg" alt="" > &nbsp
 
     </div>
 
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen1.jpg" alt="" id="Foto1"> &nbsp
         <img src="3img/Imagen2.jpg" alt="" class="normalizada"> &nbsp
         <img src="3img/Imagen3.jpg" alt="" class="normalizada"> &nbsp
 
