--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -46,9 +46,9 @@ width: 15%;
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt="" id="Foto1"> &nbsp
-        <img src="3img/Imagen2.jpg" alt="" class="normalizada"> &nbsp
-        <img src="3img/Imagen3.jpg" alt="" class="normalizada"> &nbsp
+        <img src="3img/Imagen1.jpg" alt="" > &nbsp
+        <img src="3img/Imagen2.jpg" alt="" > &nbsp
+        <img src="3img/Imagen3.jpg" alt="" > &nbsp
 
 
     </div>
