--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -23,6 +23,10 @@ width: 15%;
 
 }
 
+#Foto1{
+    width: 10% ;
+}
+
 
     </style>
 </head>
@@ -46,9 +50,9 @@ width: 15%;
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt="" > &nbsp
-        <img src="3img/Imagen2.jpg" alt="" > &nbsp
-        <img src="3img/Imagen3.jpg" alt="" > &nbsp
+        <img src="3img/Imagen1.jpg" alt="" id="Foto1" > &nbsp
+        <img src="3img/Imagen2.jpg" alt="" id="Foto2" > &nbsp
+        <img src="3img/Imagen3.jpg" alt="" id="Foto3" > &nbsp
 
 
     </div>
