--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -7,7 +7,7 @@
 
     <style>
         .horizontal {
-display: flex;
+display:block;
 justify-content:left;
 
 
@@ -16,7 +16,7 @@ justify-content:left;
 
         .vertical {
 
-display: flex;
+display:block;
 flex-direction: column;
 justify-content: left;
 width: 15%;
