--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -9,9 +9,6 @@
         .horizontal {
 display:block;
 justify-content:left;
-
-
-
         }
 
         .vertical {
@@ -24,7 +21,9 @@ width: 15%;
 }
 
 #Foto1{
-    width: 115% ;
+
+    height: auto;
+   
 }
 
 
