--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -20,10 +20,10 @@ width: 15%;
 
 }
 
-#Foto1,Foto2,Foto3{
+#Foto1,#Foto2,#Foto3{
 
-    height: 300%;
-    width: 300%;
+    height: 100%;
+    width: 100%;
    
 }
 
