--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -42,7 +42,7 @@ width: 15%;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt="" > &nbsp
+        <img src="3img/Imagen1.jpg" alt="" style="height: 0%;" > &nbsp
         <img src="3img/Imagen2.jpg" alt="" > &nbsp
         <img src="3img/Imagen3.jpg" alt="" > &nbsp
 
