--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -35,7 +35,7 @@ width: 15%;
 
     <div class="horizontal">
 
-        <img src="3img/Imagen1.jpg" alt="" style="height: 100%;" > &nbsp
+        <img src="3img/Imagen1.jpg" alt="" > &nbsp
         <img src="3img/Imagen2.jpg" alt="" > &nbsp
         <img src="3img/Imagen3.jpg" alt="" > &nbsp
 
@@ -44,9 +44,9 @@ width: 15%;
     <br>
 
     <div class="vertical">
-        <img src="3img/Imagen1.jpg" alt="" id="Foto1" > &nbsp
-        <img src="3img/Imagen2.jpg" alt="" id="Foto2" > &nbsp
-        <img src="3img/Imagen3.jpg" alt="" id="Foto3" > &nbsp
+        <img src="3img/Imagen1.jpg" alt="" > &nbsp
+        <img src="3img/Imagen2.jpg" alt="" > &nbsp
+        <img src="3img/Imagen3.jpg" alt=""  > &nbsp
 
 
     </div>
