--- a/Parte_B/Ejercicio2B.html
+++ b/Parte_B/Ejercicio2B.html
@@ -8,7 +8,7 @@
     <style>
         .horizontal {
 display:block;
-justify-content:right;
+justify-content:left;
         }
 
         .vertical {
@@ -16,7 +16,7 @@ justify-content:right;
 display:block;
 flex-direction: column;
 justify-content: left;
-width: 25%;
+width: 15%;
 
 }
 
