--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
 <title>Ejercicio 3 B</title>
+
+<style>
+ img{
+
+    background: fixed;
+ }
+
+
+</style>
 </head>
 
 
