--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -6,7 +6,7 @@
 
 <style>
  img{
-
+    background-image: url("paper.gif");
     background-attachment: fixed;
     float: right;
  }
@@ -22,7 +22,6 @@
         derecha de la página. La imagen debe permanecer fija aún cuando el usuario realice un
         scroll vertical de la página </p>
 
-        <img src="3img/Imagen1.jpg" alt="">
     
 </body>
 </html>
