--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -6,7 +6,7 @@
 
 <style>
  img{
-    background-image: url("paper.gif");
+    background-image: url("https://www.pxfuel.com/en/desktop-wallpaper-aolrb");
     background-attachment: fixed;
     float: right;
  }
