--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -6,7 +6,7 @@
 
 <style>
  img{
-    background-image: url("https://i.pinimg.com/564x/a7/8d/db/a78ddb7f505f813d5b9798c12652e81e.jpg");
+    background-image: url("3img/Imagen1.jpg");
     background-attachment: fixed;
     float: right;
  }
