--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -5,11 +5,13 @@
 <title>Ejercicio 3 B</title>
 
 <style>
- img{
-    background-image: url("3img/Imagen1.jpg");
-    background-attachment: fixed;
+
+body {
+     background-image: url("3img/Imagen1.jpg");
+     background-attachment: fixed;
     float: right;
- }
+        }
+
 
 
 </style>
