--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -10,6 +10,8 @@ body {
      background-image: url("3img/Imagen1.jpg");
      background-attachment: fixed;
     float: right;
+    background-repeat: no-repeat;
+
         }
 
 
