--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -9,7 +9,7 @@
 body {
      background-image: url("3img/Imagen1.jpg");
      background-attachment: fixed;
-    float: right;
+    float: left;
     background-repeat: no-repeat;
 
         }
