--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-<title>Ejercicio 3 B</title>
+    <title>Ejercicio 3 B</title>
 
-<style>
+    <style>
+        body {
+            background-image: url("3img/Imagen1.jpg");
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-position:bottom left ;
 
-body {
-     background-image: url("3img/Imagen1.jpg");
-     background-attachment: fixed;
-    float: left;
-    background-repeat: no-repeat;
 
         }
-
-
-
-</style>
+    </style>
 </head>
 
 
@@ -26,6 +24,7 @@ body {
         derecha de la página. La imagen debe permanecer fija aún cuando el usuario realice un
         scroll vertical de la página </p>
 
-    
+
 </body>
+
 </html>
