--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -10,7 +10,7 @@
             background-image: url("3img/Imagen1.jpg");
             background-attachment: fixed;
             background-repeat: no-repeat;
-        float: right;
+        background-position: 200%;
 
 
         }
