--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -11,6 +11,7 @@
             background-attachment: fixed;
             background-repeat: no-repeat;
         background-position:top;
+        background-position: right;
         float: left;
 
 
