--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -10,8 +10,8 @@
             background-image: url("3img/Imagen1.jpg");
             background-attachment: fixed;
             background-repeat: no-repeat;
-        background-position:top;
-        background-position: right;
+        background: position 100px;
+  
         float: left;
 
 
