--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -10,9 +10,8 @@
             background-image: url("3img/Imagen1.jpg");
             background-attachment: fixed;
             background-repeat: no-repeat;
-        background: position 100px;
+            background-position: left bottom;
   
-        float: left;
 
 
         }
