--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -7,11 +7,11 @@
 
     <style>
         body {
+            background-attachment: fixed;
             background-image: url("3img/Imagen1.jpg");
- 
             background-repeat: no-repeat;
             background-position: left bottom;
-  
+
 
 
         }
