--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -10,7 +10,7 @@
             background-attachment:fixed;
             background-image: url("3img/Imagen1.jpg");
             background-repeat: no-repeat;
-            background-position: 30% 70%;
+            background-position: right bottom;
 
 
 
