--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -7,10 +7,9 @@
 
     <style>
         body {
-            background-attachment:fixed;
-            background-image: url("3img/Imagen1.jpg");
-            background-repeat: no-repeat;
-            background-position: 50%,50%;
+            background-image: url("images/help.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
            
 
 
