--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background-image: url("images/help.png");
+            background-image: url("3img/Imagen3.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
            
