--- a/Parte_B/Ejercicio3_B.html
+++ b/Parte_B/Ejercicio3_B.html
@@ -7,9 +7,11 @@
 
     <style>
         body {
+            background-attachment: fixed;
             background-image: url("3img/Imagen3.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 25% 75%;
+  
            
 
 
