--- a/Ejercicio4_B.html
+++ b/Ejercicio4_B.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
 
     <title>Ejercicio 4 B</title>
+
+    <style>
+        .amarrillo {
+
+            color: yellow;
+        }
+
+        .rojo {
+            color: red;
+        }
+
+        .verde {
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
 
     <p>Uvas para el vino blanco:</p>
     <ul>
-        <li><a href="ri.htm">Riesling</a></li>
-        <li><a href="ch.htm">Chardonnay</a></li>
-        <li><a href="pb.htm">Pinot Blanc</a></li>
+
+        <li><a class="amarrillo" href="ri.htm">Riesling</a></li>
+        <li><a class="amarrillo" href="ch.htm">Chardonnay</a></li>
+        <li><a class="amarrillo" href="pb.htm">Pinot Blanc</a></li>
+
     </ul>
     <p>Uvas para el vino tinto:</p>
     <ul>
-        <li><a href="cs.htm">Cabernet Sauvignon</a></li>
-        <li><a href="me.htm">Merlot</a></li>
-        <li><a href="pn.htm">Pinot Noir</a></li>
+        <li><a class="rojo" href="cs.htm">Cabernet Sauvignon</a></li>
+        <li><a class="verde" href="me.htm">Merlot</a></li>
+        <li><a class="rojo" href="pn.htm">Pinot Noir</a></li>
     </ul>
 
 
