--- a/Ejercicio4_B.html
+++ b/Ejercicio4_B.html
@@ -24,6 +24,10 @@
 
 <body>
 
+    <p> a.- Defina un estilo para que todos los enlaces de uvas blancas sean amarillos y los
+        enlaces de uvas tintas sean rojos.
+        b.- Defina un estilo para que el enlace del vino merlot sea verde (no utilice estilo in-line)</p>
+
     <p>Uvas para el vino blanco:</p>
     <ul>
 
