--- a/Parte_B/Ejericicio5B.html
+++ b/Parte_B/Ejericicio5B.html
@@ -9,8 +9,16 @@
 
     <p>Si un div es referenciado por 3 selectores: selector de elemento, clase e identificador,
         ¿Cuál tiene prioridad? Verifique la respuesta realizando algún código de prueba.
-        6.- Desarrollar una sección que se vea como la imagen siguiente:
-        </p>
+       </p>
+
+       <div>
+        El navegador evalúa la especificidad en dos partes: <br>
+<ol>
+    <li>Los estilos aplicados en línea en el HTML (Inline Styles).</li>
+<li>Los estilos aplicados mediante un selector (Especificidad del selector).</li>
+
+</ol>
+       </div>
     
 </body>
 </html>
