--- a/Parte_B/Ejericicio5B.html
+++ b/Parte_B/Ejericicio5B.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
 
     <title>Ejercicio 5 B</title>
 </head>
+
 <body>
 
     <p>Si un div es referenciado por 3 selectores: selector de elemento, clase e identificador,
         ¿Cuál tiene prioridad? Verifique la respuesta realizando algún código de prueba.
-       </p>
+    </p>
+    <br>
 
-       <div>
+    <div>
         El navegador evalúa la especificidad en dos partes: <br>
-<ol>
-    <li>Los estilos aplicados en línea en el HTML (Inline Styles).</li>
-<li>Los estilos aplicados mediante un selector (Especificidad del selector).</li>
+        <ol>
+            <li>Los estilos aplicados en línea en el HTML (Inline Styles).</li>
+            <li>Los estilos aplicados mediante un selector (Especificidad del selector).</li>
+        </ol>
+    </div>
 
-</ol>
-       </div>
-    
+    <div>
+<img src="3img/Ejercicio5B.png" alt="">
+
+    </div>
+
 </body>
+
 </html>
