--- a/Parte_B/Ejericicio5B.html
+++ b/Parte_B/Ejericicio5B.html
@@ -23,9 +23,24 @@
     </div>
 
     <div>
-<img src="3img/Ejercicio5B.png" alt="">
+        <img src="3img/Ejercicio5B.png" alt="">
+    </div>
+
+    <div>
+
+        <h3> Puntuación de cada tipo de selector :</h3>
+
+        <p>Antes de comenzar, debes conocer primero cuales son los tipos de selectores en CSS, estos se dividen en varias categorías. Un ejemplo son las pseudoclases que vas a poder encontrar muchas de ellas, sin embargo, te recomiendo que solo aprendas las mas importantes.</p>
+
+        <p>La cantidad de especificidad de un selector se mide usando cuatro valores diferentes separados por coma que tienen diferente peso y pueden describirse como millares, centenas, decenas y unidades (cuatro dígitos individuales dispuestos en cuatro columnas)</p>
+
+        <p> La especificidad en CSS es un grupo de reglas aplicadas a los selectores CSS para determinar qué estilo se aplica a un elemento. Cuanto más específico sea un selector, mayor será su valor en puntos y más probable será que esté presente en el estilo del elemento </p>
+
+
 
     </div>
+
+
 
 </body>
 
