--- a/Parte_B/Ejericicio5B.html
+++ b/Parte_B/Ejericicio5B.html
@@ -72,7 +72,7 @@
             por coma que tienen diferente peso y pueden describirse como millares, centenas, decenas y unidades (cuatro
             dígitos individuales dispuestos en cuatro columnas)</p>
 
-        <p class="Parrafo3"> La especificidad en CSS es un grupo de reglas aplicadas a los selectores CSS para determinar qué estilo se
+        <p class="Parrafo3" style="color: blueviolet;"> La especificidad en CSS es un grupo de reglas aplicadas a los selectores CSS para determinar qué estilo se
             aplica a un elemento. 
             Cuanto más específico sea un selector, mayor será su valor en puntos y más probable
             será que esté presente en el estilo del elemento </p>
