--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-section{
- column-count: 3;
- background-color: green;
+table{
 
-
+    background-color: gray;
 }
 
 
@@ -20,6 +18,11 @@ section{
 <body>
 
     <section>
+
+        <table>
+ <tr> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
+
+        </table>
 
         
 
