--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -11,6 +11,11 @@ table{
     background-color: gray;
 }
 
+.Titulo{
+
+    color: blue;
+}
+
 
 
     </style>
@@ -20,7 +25,7 @@ table{
     <section>
 
         <table>
- <tr> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
+ <tr class="Titulo"> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
 
         </table>
 
