--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-section{
+table{
 
-    background-color: rgba(255, 255, 255, 0.856);
+    color: rgba(255, 255, 255, 0.856);
 }
 
 .Titulo{
