--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -26,10 +26,11 @@ table{
 
         <table>
  <tr class="Titulo"> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
+ <tr><td> Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 
         </table>
 
-        
+     
 
 
 
