--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -8,7 +8,7 @@
     <style>
 table{
 
-    color: rgba(255, 255, 255, 0.856);
+    background-color: rgba(255, 255, 255, 0.856);
 }
 
 .Titulo{
@@ -22,7 +22,7 @@ table{
 </head>
 <body>
 
-    <section>
+    <div>
 
         <table>
  <tr class="Titulo"> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
@@ -30,7 +30,7 @@ table{
 
         </table>
 
-     
+    </div>
 
 
 
