--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -26,7 +26,7 @@ table{
 
         <table>
  <tr class="Titulo"> <td>Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta </td></tr>
- <tr><td>Celulares en Promo</td> <td>3</td> <td>4</td></tr>
+ <tr><td>Celulares en Promo</td> Foro Movistar <td>Acceder</td></tr>
 
         </table>
 
