--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -19,7 +19,7 @@
 <body>
 
 <table style="background-color:  rgba(255, 255, 255, 0.856) ;">
-<tr><td class="Titulo">1</td> <td>2</td> <td>3</td></tr>
+<tr class="Titulo"><td>1</td> <td>2</td> <td>3</td></tr>
 <tr><td>4</td> <td>5</td> <td>6</td></tr>
 <tr><td>7</td> <td>8</td> <td>9</td></tr>
 <tr><td>10</td> <td>11</td> <td>12</td></tr>
