--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -19,8 +19,8 @@
 <body>
 
 <table style="background-color:  rgba(255, 255, 255, 0.856) ;">
-<tr class="Titulo"><td>1</td> <td>2</td> <td>3</td></tr>
-<tr><td>Celulares en promo</td> <td>5</td> <td>6</td></tr>
+<tr class="Titulo"><td>Tienda</td> <td>Atencion al cliente</td> <td>Mi cuenta</td></tr>
+<tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>7</td> <td>8</td> <td>9</td></tr>
 <tr><td>10</td> <td>11</td> <td>12</td></tr>
 <tr><td>13</td> <td>14</td> <td>15</td></tr>
