--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -7,6 +7,11 @@
     <title>Ejercicio 6 B </title>
     <style>
 
+        table{
+padding: 10%;
+            
+        }
+
 .Titulo{
 
     color: blue;
