--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -28,7 +28,7 @@
 <tr class="Titulo"><td>Tienda</td> <td>Atencion al cliente</td> <td>Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
-<tr><td>10</td> <td>11</td> <!--  <td>12</td>--></tr>
+<tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
 <tr><td>13</td> <td>14</td> <td>15</td></tr>
 <tr><td>16</td> <td>17</td> <td>18</td></tr>
 <tr><td>19</td> <td>20</td> <td>21</td></tr>
