--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -29,7 +29,7 @@
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
-<tr><td>13</td> <td>14</td> <td>15</td></tr>
+<tr><td>Servicios</td> <td>Sorporte Tecnico</td> <td rowspan="2">Mi movistar app: Accede <br> a tu cuenta</td></tr>
 <tr><td>16</td> <td>17</td> <td>18</td></tr>
 <tr><td>19</td> <td>20</td> <td>21</td></tr>
 <tr><td>22</td> <td>23</td> <td>24</td></tr>
