--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -29,12 +29,13 @@
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
-<tr><td>Servicios</td> <td>Sorporte Tecnico</td> <td rowspan="2">Mi movistar app: Accede <br> a tu cuenta</td></tr>
-<tr><td>Movistar One</td> <td>Roaming y cobertura</td>  <!--<td>18</td> --></tr>
+<tr><td>Servicios</td> <td>Sorporte Tecnico</td> <td>Mi movistar app: Accede <br> a tu cuenta</td></tr>
+<tr><td>Movistar One</td> <td>Roaming y cobertura</td> <td>18</td> Habla con Aura</tr>
 <tr><td>19</td> <td>20</td> <td>21</td></tr>
 <tr><td>22</td> <td>23</td> <td>24</td></tr>
 <tr><td>25</td> <td>26</td> <td>26</td></tr>
 <tr><td>28</td> <td>29</td> <td>30</td></tr>
+<tr><td>31</td> <td>32</td> <td>33</td></tr>
 
 
 
