--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -31,7 +31,7 @@
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
 <tr><td>Servicios</td> <td>Sorporte Tecnico</td> <td>Mi movistar app: Accede <br> a tu cuenta</td></tr>
 <tr><td>Movistar One</td> <td>Roaming y cobertura</td> <td>Habla con Aura</td></tr>
-<tr><td>19</td> <td>20</td> <td>21</td></tr>
+<tr><td>Paquetes</td> <td>Tramites y consultas</td> <td rowspan="2">Logo GooglePlay</td></tr>
 <tr><td>22</td> <td>23</td> <td>24</td></tr>
 <tr><td>25</td> <td>26</td> <td>26</td></tr>
 <tr><td>28</td> <td>29</td> <td>30</td></tr>
