--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -32,10 +32,10 @@
 <tr><td>Servicios</td> <td>Sorporte Tecnico</td> <td>Mi movistar app: Accede <br> a tu cuenta</td></tr>
 <tr><td>Movistar One</td> <td>Roaming y cobertura</td> <td>Habla con Aura</td></tr>
 <tr><td>Paquetes</td> <td>Tramites y consultas</td> <td rowspan="2">Logo GooglePlay</td></tr>
-<tr><td>22</td> <td>23</td> <td>24</td></tr>
-<tr><td>25</td> <td>26</td> <td>26</td></tr>
-<tr><td>28</td> <td>29</td> <td>30</td></tr>
-<tr><td>31</td> <td>32</td> <td>33</td></tr>
+<tr><td>Creditos</td>  <!--<td>23</td>-->  <!--<td>24</td>--></tr>
+<tr><td>Roaming</td> <!--<td>26</td>--> <td rowspan="2">Logo app Store</td></tr>
+<tr><td>Promociones</td> <!--<td>29</td>--> <!--<td>30</td>--></tr>
+<tr><td>Portabilidad</td> <!--<td>32</td>--> <!--<td>33</td>--></tr>
 
 
 
