--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -33,10 +33,10 @@
 <tr><td>Movistar One</td> <td>Roaming y cobertura</td> <td>Habla con Aura</td></tr>
 <tr><td>Paquetes</td> <td>Tramites y consultas</td> <td rowspan="2">Logo GooglePlay </td></tr>
 <tr><td>Creditos</td>  <!--<td>23</td>-->  <!--<td>24</td>--></tr>
-<tr><td>Roaming</td> <td> &nbsp</td><td>Logo App Store</td></tr>
-<tr><td>Promociones</td> <td>29</td> <td>30</td></tr>
-<tr><td>Portabilidad</td> <td>32</td> <td>33</td> </tr>
-<tr><td>34</td> b<td>35</td> <td>36</td></tr>
+<tr><td>Roaming</td> <td> &nbsp</td> <td rowspan="2">Logo App Store</td></tr>
+<tr><td>Promociones</td> <td> &nbsp</td>  <!--<td>30</td> --></tr>
+<tr><td>Portabilidad</td> <td>&nbsp</td> <td>&nbsp</td> </tr>
+<tr><td>&nbsp</td> b<td>&nbsp</td> <td>&nbsp</td></tr>
 
 
 
