--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<table style="background-color:  rgba(255, 255, 255, 0.856) ;">
+<table border="1" ;">
 <tr class="Titulo"><td>Tienda</td> <td>Atencion al cliente</td> <td>Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
