--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,7 @@
         table{
             border-spacing: 0.5cm;
          border-color: black;
-         background-color: aqua;
+         background-color: gray;
             
         }
 
