--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -9,7 +9,7 @@
 
         table{
             border-spacing: 0.5cm;
-         border-color:gray;
+         border-color: blue;
          background-color: gray;
             
         }
