--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-<table border="1" ;">
+<table>
 <tr class="Titulo"><td>Tienda</td> <td>Atencion al cliente</td> <td>Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
