--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,7 @@
         table{
             border-spacing: 0.5cm;
 
-         background-color: gray;
+         background-color: rgb(192, 192, 192);
             
         }
 
