--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -11,6 +11,8 @@
             border-spacing: 0.5cm;
 
          background-color: rgb(192, 192, 192);
+         width: 300 ;
+         height: 250 ;
             
         }
 
