--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,7 @@
         table{
 
 
-         background-color: rgb(255, 255, 255);
+         background-color: rgba(255, 255, 255, 0.795);
          width: 300 ;
    
             
