--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -12,6 +12,7 @@
 
          background-color: rgba(255, 255, 255, 0.404);
          width: 300 ;
+         font-size: 5%;
    
             
         }
