--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -12,8 +12,8 @@
 
          background-color: rgba(255, 255, 255, 0.404);
          width: 300 ;
-         font-size: 15px;
-         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+         font-size: 10px;
+         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
    
             
         }
