--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -13,7 +13,7 @@
          background-color: rgba(255, 255, 255, 0.404);
          width: 300 ;
          font-size: 10px;
-         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+         font-family:Consolas;
    
             
         }
