--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -32,7 +32,7 @@
 <body>
 
 <table>
-<tr class="Titulo"><td> <a href=""></a> Tienda</td> <td> <a href=""></a> Atencion al cliente</td> <td> <a href=""></a> Mi cuenta</td></tr>
+<tr class="Titulo"><td> <img src="" alt=""> Tienda</td> <td> <img src="" alt=""> Atencion al cliente</td> <img src="" alt=""> Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
