--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -33,7 +33,7 @@
 <body>
 
 <table>
-<tr class="Titulo"><td> <link rel="" href="Iconos/Icono1.svg"> Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta</td></tr>
+<tr class="Titulo"><td> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td>Atencion al cliente</td> <td> Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
