--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -22,18 +22,13 @@
 
     color: blue;
     font-weight: bold;
-
-
 }
-
-
-
     </style>
 </head>
 <body>
 
 <table>
-<tr class="Titulo"><td> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td> <img src="Iconos/Icono2.svg" alt=""> Atencion al cliente</td> <td> Mi cuenta</td></tr>
+<tr class="Titulo"><td> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td> <img src="Iconos/Icono2.svg" alt=""> Atencion al cliente</td> <td> <img src="Iconos/Icono3.svg" alt=""> Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
