--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -14,6 +14,7 @@
          width: 300 ;
          font-size: 10px;
          font-family:Consolas;
+         border-spacing: 4;
    
             
         }
