--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<table>
+<table border="1">
 <tr class="Titulo"><td> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td> <img src="Iconos/Icono2.svg" alt=""> Atencion al cliente</td> <td> <img src="Iconos/Icono4.svg" alt=""> Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
