--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,7 @@
         table{
 
 
-            background-color: rgba(255, 255, 255, 0.404);
+        background-color: grey;
          width: 300 ;
          font-size: 10px;
          font-family:Consolas;
