--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,7 @@
         table{
 
 
-        background-color: grey;
+        background-color: rgb(206, 195, 195);
          width: 300 ;
          font-size: 10px;
          font-family:Consolas;
