--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -15,6 +15,8 @@
          font-size: 10px;
          font-family:Consolas;
          border: spacing 5px;cm
+         margin: 15px ;
+    
    
             
         }
