--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -15,7 +15,7 @@
          font-size: 10px;
          font-family:Consolas;
          border: spacing 5px;cm;
-         padding-bottom: 1cm;
+
 
             
         }
@@ -30,7 +30,7 @@
 }
 
 td{
-    padding-bottom: 0.5 cm;
+    border-bottom: 1px solid #00000000;
 }
     </style>
 </head>
